--- a/src/app/component/dashboard/doctor/doctor.component.html
+++ b/src/app/component/dashboard/doctor/doctor.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-6 col-md-4 mt-3">
       <mat-card class="add-doc text-center" (click) = "addDoctor()">
         <mat-card-content>
-          Add Doctor <br>
+          Ajouter docteur <br>
           <mat-icon>group_add</mat-icon>
         </mat-card-content>
       </mat-card>
