--- a/src/app/component/auth/login/login.component.html
+++ b/src/app/component/auth/login/login.component.html
@@ -1,32 +1,33 @@
+<html lang="fr">
 <div class="row mt-5">
   <div class="col"></div>
   <div class="col">
 
     <mat-card>
       <div [formGroup] = "form">
-          <mat-card-title>Login</mat-card-title>
+          <mat-card-title>Connectez vous ! </mat-card-title>
           <mat-form-field>
             <mat-label>Email</mat-label>
             <input matInput
-                    placeholder="pat@example.com"
+                    placeholder="Entrez votre email... example@gmail.com"
                     formControlName="email"
                     required>
-            <mat-error *ngIf="form.get('email')?.invalid || form.get('email')?.dirty || form.get('email')?.touched">Enter valid email address </mat-error>
+            <mat-error *ngIf="form.get('email')?.invalid || form.get('email')?.dirty || form.get('email')?.touched">Entrez une adresse email valide </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Password</mat-label>
+            <mat-label>Mot de passe</mat-label>
             <input matInput
-                    placeholder=""
+                    placeholder="Entrez votre mot de passe..."
                     formControlName="password"
                     required
                     type="password">
-            <mat-error *ngIf="form.get('password')?.invalid || form.get('password')?.dirty || form.get('password')?.touched">Enter valid qualification </mat-error>
+            <mat-error *ngIf="form.get('password')?.invalid || form.get('password')?.dirty || form.get('password')?.touched">Entrez un mot de passe valides </mat-error>
           </mat-form-field>
       </div>
 
       <div >
-          <button mat-raised-button color="primary" (click)="login()" class="mt-3" [disabled]="form.invalid"> Login </button>
+          <button mat-raised-button color="primary" (click)="login()" class="mt-3" [disabled]="form.invalid"> Se connecter </button>
       </div>
 
     </mat-card>
