--- a/src/app/component/dashboard/doctor/add-doctor/add-doctor.component.html
+++ b/src/app/component/dashboard/doctor/add-doctor/add-doctor.component.html
@@ -8,30 +8,30 @@
       <mat-grid-tile>
         <div>
           <mat-form-field>
-            <mat-label>Full name</mat-label>
+            <mat-label>Prenom et nom</mat-label>
             <input matInput
                     placeholder="Ex. code logic"
                     formControlName="name"
                     required>
-            <mat-error *ngIf="form.get('name')?.invalid || form.get('name')?.dirty || form.get('name')?.touched">Enter full name</mat-error>
+            <mat-error *ngIf="form.get('name')?.invalid || form.get('name')?.dirty || form.get('name')?.touched">Entrez le nom complet</mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Mobile number : </mat-label>
+            <mat-label>Numero de téléphone : </mat-label>
             <input matInput
                     placeholder="9865452152"
                     formControlName="mobile"
                     required>
-            <mat-error *ngIf="form.get('mobile')?.invalid || form.get('mobile')?.dirty || form.get('mobile')?.touched">Enter valid mobile number</mat-error>
+            <mat-error *ngIf="form.get('mobile')?.invalid || form.get('mobile')?.dirty || form.get('mobile')?.touched">Entrez un numéro de mobile valide</mat-error>
           </mat-form-field>
 
           <mat-form-field>
             <mat-label>Email</mat-label>
             <input matInput
-                    placeholder="pat@example.com"
+                    placeholder="example@gmail.com"
                     formControlName="email"
                     required>
-            <mat-error *ngIf="form.get('email')?.invalid || form.get('email')?.dirty || form.get('email')?.touched">Enter valid email address </mat-error>
+            <mat-error *ngIf="form.get('email')?.invalid || form.get('email')?.dirty || form.get('email')?.touched">Entrez une adresse e-mail valide</mat-error>
           </mat-form-field>
 
           <mat-form-field>
@@ -40,23 +40,23 @@
                     placeholder="ex. MBBS"
                     formControlName="qualification"
                     required>
-            <mat-error *ngIf="form.get('qualification')?.invalid || form.get('qualification')?.dirty || form.get('qualification')?.touched">Enter valid qualification </mat-error>
+            <mat-error *ngIf="form.get('qualification')?.invalid || form.get('qualification')?.dirty || form.get('qualification')?.touched">Entrez une qualification valide </mat-error>
           </mat-form-field>
         </div>
       </mat-grid-tile>
 
       <mat-grid-tile>
         <div>
-          <mat-label class="me-3">Gender : </mat-label>
+          <mat-label class="me-3">Genre:</mat-label>
           <br>
           <mat-radio-group aria-label="Select a gender" color="primary" formControlName="gender">
-            <mat-radio-button value="male">Male</mat-radio-button>
-            <mat-radio-button value="female">Female</mat-radio-button>
-            <mat-radio-button value="other">Other</mat-radio-button>
+            <mat-radio-button value="male">Homme</mat-radio-button>
+            <mat-radio-button value="female">Femme</mat-radio-button>
+            <mat-radio-button value="other">Autre</mat-radio-button>
           </mat-radio-group>
 
           <mat-form-field class="mt-4">
-            <mat-label>Department</mat-label>
+            <mat-label>Département</mat-label>
             <mat-select formControlName="department" name="department">
               <mat-option *ngFor="let department of departments" [value]="department">
                 {{department}}
@@ -65,12 +65,12 @@
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Birthdate</mat-label>
+            <mat-label>Date de naissance</mat-label>
             <input matInput [matDatepicker]="picker" formControlName="birthdate">
-            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-hint>Mois/Jour/Année</mat-hint>
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
-            <mat-error *ngIf="form.get('birthdate')?.invalid || form.get('birthdate')?.dirty || form.get('birthdate')?.touched">Choose valid birthdate</mat-error>
+            <mat-error *ngIf="form.get('birthdate')?.invalid || form.get('birthdate')?.dirty || form.get('birthdate')?.touched">Choisissez une date de naissance valide</mat-error>
           </mat-form-field>
 
         </div>
@@ -81,6 +81,6 @@
 </mat-dialog-content>
 
 <div mat-dialog-actions>
-  <button mat-raised-button mat-dialog-close (click)="cancelRegistration()">Cancel</button>
+  <button mat-raised-button mat-dialog-close (click)="cancelRegistration()">Annuler</button>
   <button mat-raised-button color="primary" mat-dialog-close (click)="registerDoctor()" [disabled]="form.invalid"> {{buttonName}} </button>
 </div>
