--- a/src/app/component/dashboard/doctor/delete-doctor/delete-doctor.component.html
+++ b/src/app/component/dashboard/doctor/delete-doctor/delete-doctor.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>{{title}}</h1>
 <div mat-dialog-content>
-  <p>Are you sure you want to delete {{doctorName}} ? </p>
+  <p>Etes-vous sûr de vouloir supprimer{{doctorName}} ? </p>
 </div>
 <div mat-dialog-actions>
-  <button mat-raised-button (click)="close()">No Thanks</button>
-  <button mat-raised-button color="accent"  (click)="delete()">Delete</button>
+  <button mat-raised-button (click)="close()">Non Merci</button>
+  <button mat-raised-button color="accent"  (click)="delete()">Supprimer</button>
 </div>
