--- a/src/app/component/dashboard/doctor/view-doctor/view-doctor.component.html
+++ b/src/app/component/dashboard/doctor/view-doctor/view-doctor.component.html
@@ -18,8 +18,8 @@
       </div>
       <div class="col-md-6">
        <mat-card-content>
-        <span> Gender : </span> {{doctorObj.gender}} <br>
-        <span> Department : </span> {{doctorObj.department}}
+        <span> Genre : </span> {{doctorObj.gender}} <br>
+        <span> Département : </span> {{doctorObj.department}}
        </mat-card-content>
       </div>
     </div>
@@ -29,7 +29,7 @@
       <!-- Patient table -->
       <h2 style="font-weight: 700;" class="mt-4" color="primary">Patient Information</h2>
       <mat-form-field appearance="standard">
-        <mat-label>Filter</mat-label>
+        <mat-label>Filtre</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="Ex. code logic" #input>
       </mat-form-field>
 
@@ -38,7 +38,7 @@
 
           <!-- Name Column -->
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom </th>
             <td mat-cell *matCellDef="let row"> {{row?.patient_name}} </td>
           </ng-container>
 
@@ -50,12 +50,12 @@
 
            <!-- Gender Column -->
            <ng-container matColumnDef="gender">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Genre </th>
             <td mat-cell *matCellDef="let row"> {{row?.gender}} </td>
           </ng-container>
 
           <ng-container matColumnDef="prescription">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Genre </th>
             <td mat-cell *matCellDef="let row"> {{row?.prescription}} </td>
           </ng-container>
 
@@ -68,12 +68,12 @@
               </button>
               <mat-menu #menu="matMenu">
                 <button mat-menu-item (click)="viewPatient(row)">
-                  <mat-icon>open_in_new</mat-icon>
-                  <span>View</span>
+                  <mat-icon>Ouvrir à nouveau</mat-icon>
+                  <span>Voir</span>
                 </button>
                 <button mat-menu-item (click)="editPatient(row)">
-                  <mat-icon>edit</mat-icon>
-                  <span>Edit</span>
+                  <mat-icon>supprimer</mat-icon>
+                  <span>Supprimer</span>
                 </button>
               </mat-menu>
             </td>
@@ -84,7 +84,7 @@
 
           <!-- Row shown when there is no matching data. -->
           <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            <td class="mat-cell" colspan="4">Aucune donnée correspondant au filtre "{{input.value}}"</td>
           </tr>
         </table>
 
