--- a/src/app/component/dashboard/patient/patient.component.html
+++ b/src/app/component/dashboard/patient/patient.component.html
@@ -4,7 +4,7 @@
     <div class="col-sm-6 col-md-4 mt-3">
       <mat-card class="add-doc text-center" (click) = "addPatient()">
         <mat-card-content>
-          Add Patient <br>
+          Ajouter Patient <br>
           <mat-icon>group_add</mat-icon>
         </mat-card-content>
       </mat-card>
@@ -12,10 +12,10 @@
   </div>
 
     <!-- Patient table -->
-    <h2 style="font-weight: 700;" class="mt-4" color="primary">Patient Information</h2>
+    <h2 style="font-weight: 700;" class="mt-4" color="primary">Les informations des patients</h2>
     <mat-form-field appearance="standard">
-      <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. code logic" #input>
+      <mat-label>Filtre</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Pape Ibrahima MBAYE" #input>
     </mat-form-field>
 
     <div class="mat-elevation-z8">
@@ -23,25 +23,25 @@
 
         <!-- Name Column -->
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Prenom et nom </th>
           <td mat-cell *matCellDef="let row"> {{row.patient_name}} </td>
         </ng-container>
 
         <!-- Mobile Column -->
         <ng-container matColumnDef="mobile">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Mobile </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Numéro de téléphone </th>
           <td mat-cell *matCellDef="let row"> {{row.mobile}} </td>
         </ng-container>
 
         <!-- Department Column -->
         <ng-container matColumnDef="doctor">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Doctor </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Docteur </th>
           <td mat-cell *matCellDef="let row"> {{getDoctorName(row.doctor_id)}} </td>
         </ng-container>
 
          <!-- Gender Column -->
          <ng-container matColumnDef="gender">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Genre </th>
           <td mat-cell *matCellDef="let row"> {{row.gender}} </td>
         </ng-container>
 
@@ -55,15 +55,15 @@
             <mat-menu #menu="matMenu">
               <button mat-menu-item (click)="viewPatient(row)">
                 <mat-icon>open_in_new</mat-icon>
-                <span>View</span>
+                <span>Voir</span>
               </button>
               <button mat-menu-item (click)="editPatient(row)">
                 <mat-icon>edit</mat-icon>
-                <span>Edit</span>
+                <span>Modifier</span>
               </button>
               <button mat-menu-item (click)="deletePatient(row)">
                 <mat-icon>delete</mat-icon>
-                <span>Delete</span>
+                <span>Supprimer</span>
               </button>
             </mat-menu>
           </td>
@@ -74,7 +74,7 @@
 
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+          <td class="mat-cell" colspan="4">Aucune donnée correspondant au filtre "{{input.value}}"</td>
         </tr>
       </table>
 
