--- a/src/app/component/dashboard/sidebar/sidebar.component.html
+++ b/src/app/component/dashboard/sidebar/sidebar.component.html
@@ -7,8 +7,8 @@
     <mat-divider></mat-divider>
     <mat-nav-list>
       <a mat-list-item routerLinkActive="active" routerLink="dashboard/patient"> <mat-icon>personal_injury</mat-icon> Patient</a>
-      <a mat-list-item routerLinkActive="active" routerLink="dashboard/doctor"> <mat-icon>diversity_1</mat-icon> Doctor</a>
-      <a mat-list-item routerLinkActive="active" (click)="logout()"> <mat-icon>logout</mat-icon> Sign out</a>
+      <a mat-list-item routerLinkActive="active" routerLink="dashboard/doctor"> <mat-icon>diversity_1</mat-icon> Medecin</a>
+      <a mat-list-item routerLinkActive="active" (click)="logout()"> <mat-icon>logout</mat-icon> Deconnexion</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -21,7 +21,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>hospital-management</span>
+      <span>Gestion des patients</span>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
