--- a/src/app/component/dashboard/doctor/doctor.component.html
+++ b/src/app/component/dashboard/doctor/doctor.component.html
@@ -3,17 +3,17 @@
     <div class="col-sm-6 col-md-4 mt-3">
       <mat-card class="add-doc text-center" (click) = "addDoctor()">
         <mat-card-content>
-          Ajouter docteur <br>
+          Ajouter Medecin<br>
           <mat-icon>group_add</mat-icon>
         </mat-card-content>
       </mat-card>
     </div>
   </div>
 
-  <h2 style="font-weight: 700;" color="primary" class="mt-4">Doctors Information</h2>
+  <h2 style="font-weight: 700;" color="primary" class="mt-4">Informations sur les médecins</h2>
   <!-- doctors table -->
   <mat-form-field appearance="standard">
-    <mat-label>Filter</mat-label>
+    <mat-label>Filtre</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. code logic" #input>
   </mat-form-field>
 
@@ -22,7 +22,7 @@
 
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Prenom et nom </th>
         <td mat-cell *matCellDef="let row"> {{row.name}} </td>
       </ng-container>
 
@@ -40,13 +40,13 @@
 
       <!-- Department Column -->
       <ng-container matColumnDef="department">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Department </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Departement </th>
         <td mat-cell *matCellDef="let row"> {{row.department}} </td>
       </ng-container>
 
        <!-- Gender Column -->
        <ng-container matColumnDef="gender">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Genre </th>
         <td mat-cell *matCellDef="let row"> {{row.gender}} </td>
       </ng-container>
 
@@ -60,15 +60,15 @@
           <mat-menu #menu="matMenu">
             <button mat-menu-item (click)="viewDoctor(row)">
               <mat-icon>open_in_new</mat-icon>
-              <span>View</span>
+              <span>Voir</span>
             </button>
             <button mat-menu-item (click)="editDoctor(row)">
               <mat-icon>edit</mat-icon>
-              <span>Edit</span>
+              <span>Modifier</span>
             </button>
             <button mat-menu-item (click)="deleteDoctor(row)">
               <mat-icon>delete</mat-icon>
-              <span>Delete</span>
+              <span>Supprimer</span>
             </button>
           </mat-menu>
         </td>
@@ -79,12 +79,11 @@
 
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        <td class="mat-cell" colspan="4">Aucune donnée correspondant au filtre "{{input.value}}"</td>
       </tr>
     </table>
 
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
   </div>
-
 
 </div>
