--- a/src/app/component/dashboard/patient/delete-patient/delete-patient.component.html
+++ b/src/app/component/dashboard/patient/delete-patient/delete-patient.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>{{title}}</h1>
 <div mat-dialog-content>
-  <p>Are you sure you want to delete <b>{{patientName}}</b> ? </p>
+  <p>Etes-vous sûr de vouloir supprimer <b>{{patientName}}</b> ? </p>
 </div>
 <div mat-dialog-actions>
-  <button mat-raised-button (click)="close()">No Thanks</button>
+  <button mat-raised-button (click)="close()">Non merci</button>
   <button mat-raised-button color="accent"  (click)="delete()">Delete</button>
 </div>
