--- a/src/app/component/dashboard/patient/add-patient/add-patient.component.html
+++ b/src/app/component/dashboard/patient/add-patient/add-patient.component.html
@@ -8,16 +8,16 @@
       <mat-grid-tile>
         <div>
           <mat-form-field>
-            <mat-label>Full name</mat-label>
+            <mat-label>Prénom et nom</mat-label>
             <input matInput
-                    placeholder="Ex. code logic"
+                    placeholder="Ex: Pape Ibrahima MBAYE"
                     formControlName="patient_name"
                     required>
             <mat-error *ngIf="form.get('patient_name')?.invalid || form.get('patient_name')?.dirty || form.get('patient_name')?.touched">Enter full name</mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Mobile number : </mat-label>
+            <mat-label>Numéro de téléphone : </mat-label>
             <input matInput
                     placeholder="9865452152"
                     formControlName="mobile"
@@ -26,7 +26,7 @@
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Prescription</mat-label>
+            <mat-label>Ordonnance</mat-label>
             <input matInput
                     placeholder="ex. medicines"
                     formControlName="prescription"
@@ -38,16 +38,16 @@
 
       <mat-grid-tile>
         <div>
-          <mat-label class="me-3">Gender : </mat-label>
+          <mat-label class="me-3">Genre : </mat-label>
           <br>
           <mat-radio-group aria-label="Select a gender" color="primary" formControlName="gender">
-            <mat-radio-button value="male">Male</mat-radio-button>
-            <mat-radio-button value="female">Female</mat-radio-button>
-            <mat-radio-button value="other">Other</mat-radio-button>
+            <mat-radio-button value="male">Homme</mat-radio-button>
+            <mat-radio-button value="female">Femme</mat-radio-button>
+            <mat-radio-button value="other">Autre</mat-radio-button>
           </mat-radio-group>
 
           <mat-form-field class="mt-4">
-            <mat-label>Doctor</mat-label>
+            <mat-label>Medecin</mat-label>
             <mat-select formControlName="doctor_id" name="doctor_id">
               <mat-option *ngFor="let doctor of allDoctors" [value]="doctor.doctor_id">
                 {{doctor.doctor_name}}
@@ -56,12 +56,12 @@
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Admission Date</mat-label>
+            <mat-label>Date d'admission</mat-label>
             <input matInput [matDatepicker]="picker" formControlName="admission_date">
-            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-hint>Mois/Jour/année</mat-hint>
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
-            <mat-error *ngIf="form.get('admission_date')?.invalid || form.get('admission_date')?.dirty || form.get('admission_date')?.touched">Choose valid admission date</mat-error>
+            <mat-error *ngIf="form.get('admission_date')?.invalid || form.get('admission_date')?.dirty || form.get('admission_date')?.touched">Choisissez une date d'admission valide</mat-error>
           </mat-form-field>
 
         </div>
@@ -72,6 +72,6 @@
 </mat-dialog-content>
 
 <div mat-dialog-actions>
-  <button mat-raised-button mat-dialog-close (click)="cancelRegistration()">Cancel</button>
+  <button mat-raised-button mat-dialog-close (click)="cancelRegistration()">Retour</button>
   <button mat-raised-button color="primary" mat-dialog-close (click)="registerPatient()" [disabled]="form.invalid"> {{buttonName}} </button>
 </div>
