--- a/src/app/component/dashboard/doctor/doctor.component.html
+++ b/src/app/component/dashboard/doctor/doctor.component.html
@@ -14,7 +14,7 @@
   <!-- doctors table -->
   <mat-form-field appearance="standard">
     <mat-label>Filtre</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. code logic" #input>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Pape Ibrahima MBAYE" #input>
   </mat-form-field>
 
   <div class="mat-elevation-z8">
