--- a/src/app/component/dashboard/doctor/view-doctor/view-doctor.component.html
+++ b/src/app/component/dashboard/doctor/view-doctor/view-doctor.component.html
@@ -55,7 +55,7 @@
           </ng-container>
 
           <ng-container matColumnDef="prescription">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Genre </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Ordonnance </th>
             <td mat-cell *matCellDef="let row"> {{row?.prescription}} </td>
           </ng-container>
 
