--- a/src/app/component/dashboard/patient/view-patient/view-patient.component.html
+++ b/src/app/component/dashboard/patient/view-patient/view-patient.component.html
@@ -11,7 +11,7 @@
         <mat-card-content>
           <span> Nom du médecin : </span> {{patientObj.doctor_name}} <br>
           <span> Mobile : </span> {{patientObj.mobile}} <br>
-          <span> Prescription : </span> {{patientObj.prescription}}
+          <span> Ordonnance : </span> {{patientObj.prescription}}
         </mat-card-content>
       </div>
       <div class="col-md-6">
