--- a/src/app/component/dashboard/patient/delete-patient/delete-patient.component.html
+++ b/src/app/component/dashboard/patient/delete-patient/delete-patient.component.html
@@ -4,5 +4,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-raised-button (click)="close()">Non merci</button>
-  <button mat-raised-button color="accent"  (click)="delete()">Delete</button>
+  <button mat-raised-button color="accent"  (click)="delete()">Supprimer</button>
 </div>
