--- a/src/app/component/dashboard/patient/add-patient/add-patient.component.html
+++ b/src/app/component/dashboard/patient/add-patient/add-patient.component.html
@@ -41,9 +41,9 @@
           <mat-label class="me-3">Genre : </mat-label>
           <br>
           <mat-radio-group aria-label="Select a gender" color="primary" formControlName="gender">
-            <mat-radio-button value="male">Homme</mat-radio-button>
-            <mat-radio-button value="female">Femme</mat-radio-button>
-            <mat-radio-button value="other">Autre</mat-radio-button>
+            <mat-radio-button value="Homme">Homme</mat-radio-button>
+            <mat-radio-button value="Femme">Femme</mat-radio-button>
+            <mat-radio-button value="Autre">Autre</mat-radio-button>
           </mat-radio-group>
 
           <mat-form-field class="mt-4">
